src/ui/Layout.css
.page-wrapper {
  height: 100vh;
  overflow: hidden;
}

.layout {
  --easing: ease-in;
  --duration: 500ms;
  align-items: stretch;
  display: flex;
  overflow-y: auto;
  height: 100%;
}

.page-wrapper:has(.global-header) .layout {
  --spacing: 5.375rem;
  margin-top: calc(var(--spacing) + 1px);
  height: calc(100% - var(--spacing) - 1px);
}

.header-wrapper {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
}

.global-header {
  background-color: var(--black);
  color: var(--white);
  display: flex;
  align-items: center;
  padding: 0.75rem 1rem 0.5rem;
  justify-content: space-between;

  & > div {
    display: flex;
    align-items: center;
  }

  img {
    filter: invert(100%);
  }

  span {
    margin-left: 1.5rem;
  }

  .header-title {
    display: block;
    font-size: 1.35rem;
    font-weight: var(--weight-bold);
    line-height: 2rem;
    padding-bottom: 0.5rem;
  }

  .log-out-button {
    background-color: transparent;
    border: 1px solid var(--gray-medium-dark);
    border-radius: 3px;
    color: var(--white);
    cursor: pointer;
    font-family: var(--sans-serif);
    font-size: 1rem;
    font-weight: var(--weight-bold-light);
    padding: 0.75rem 1.5rem;
    transition: background-color ease-in-out 100ms;
  }

  .log-out-button:hover,
  .log-out-button:focus {
    background-color: var(--gray-dark-extra);
  }

  .settings-link {
    margin-inline-start: 1rem;
    display: flex;
    align-items: center;
    justify-items: center;

    img {
      height: 1.75rem;
      width: 1.75rem;
    }
  }
}

[href='#skip-to-content'] {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  position: absolute;
}

[href='#skip-to-content']:focus {
  padding: 1rem;
  position: fixed;
  top: 10px;
  left: 10px;
  background: white;
  z-index: 1;
  width: auto;
  height: auto;
  clip: auto;
}

.sidebar {
  background-color: var(--gray-light);
  position: relative;
  height: calc(100% - 1.25rem);
  flex: 1;
}

.email-editor-sidebar {
  flex: unset;
  width: 33.33vw;
  transition: width var(--easing) var(--duration);
}

.translation-mode .email-editor-sidebar {
  width: 0;
}

.sidebar-inner {
  position: absolute;
  right: 0;
  top: 0;
  padding-top: 1.25rem;
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
  width: 100%;
}

.email-editor-sidebar .sidebar-inner {
  width: 33.33vw;
}

.sidebar .department-seal-container {
  padding-bottom: 1rem;
}

.spaced-sidebar-container {
  padding: 0 2rem;
}

.sidebar nav {
  display: flex;
  flex: 1;
}

.sidebar-list {
  display: flex;
  flex-direction: column;
  font-size: 1.35rem;
  font-weight: var(--weight-bold);
  gap: 1.25rem;
  flex: 1;
  line-height: 2rem;
}

.sidebar-spacer {
  flex: 1;
}

.sidebar-list a {
  align-items: center;
  color: var(--black);
  display: flex;
  gap: 0.75rem;
  text-decoration: none;
}

.sidebar-list a.sidebar-active-link {
  text-decoration: underline;
}

.page-content {
  flex: 4;
  height: 100%;
  overflow: auto;
  position: relative;
  transform: translateX(0);
  transition: transform var(--easing) var(--duration);
}

.heading {
  font-size: 3.5rem;
  font-weight: var(--weight-bold-extra);
  line-height: 4rem;
  margin: 0;
  margin-bottom: 0.6rem;
}

.subheading {
  font-size: var(--font-huge);
  line-height: 1.5;
}

.paragraph {
  font-size: var(--font-medium);
  font-weight: var(--weight-normal);
  margin: 0;
  margin-bottom: 1.5rem;
}

.spaced-container {
  padding-top: 6rem;
  padding-left: 5.25rem;
  padding-right: 9.75rem;
}

.input,
.textarea {
  border: 1px solid var(--black);
  font-family: var(--sans-serif);
  font-size: var(--font-medium);
  line-height: 1.5;
  padding: 0.5rem;
}

.uswds-icon-value,
.uswds-icon-option {
  align-items: center;
  display: flex;
}

.uswds-icon-label {
  display: flex;
  padding-left: 0.25rem;
}

.actions {
  align-items: center;
  display: flex;
  gap: 1rem;
}

